# agentcore-gateway-setup

./: README.md
.claude/: settings.json  settings.local.json
agentcore/: agentcore.json  aws-targets.json
agentcore/.cli/: deployed-state.json
agentcore/cdk/: package-lock.json
app/mcp_server_gateway/: README.md  main.py  pyproject.toml
