[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_server_gateway"
version = "0.1.0"
description = "AgentCore MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro >= 0.17.0",
    "mcp >= 1.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
